# tpeanuts

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  run_SNO_test.py  run_lucente.py  run_peanuts.py  run_prob_earth.py  run_prob_sun.py
atmosphere/: __init__.py  density.py  density_pymsis.py  earth.py  flux.py  geometry.py  propagation.py
coherent/: __init__.py  coordinates.py  evolution.py
config/: __init__.py  default.py  presets.py  propagation.py
core/: __init__.py  dressing.py  evolution.py  hamiltonian.py  integration.py  perturbation.py  pmns.py  potential.py  probabilities.py  segment_evolution.py  spectral.py
core/BSM/: NSIConfig.py  PMNS_sterile.py  __init__.py  bsm_mass_spectrum.py  bsm_nsi.py  bsm_sterile.py  hamiltonian.py
core/SM/: __init__.py  pmns.py  sm_mass_spectrum.py  sm_pmns.py
core/common/: __init__.py  evolutor.py  flux.py  hamiltonian.py  mass_spectrum.py  neutrino.py  oscillation.py  pmns.py  potential.py  presets.py  probability.py
core/numerical/: __init__.py  evolutor.py  geometry.py
core/perturbative/: __init__.py  evolutor.py  spectral.py
data/: bs2005agsopflux.csv
data/atmosphere/: README.md
data/density/: earth_density_ne.csv  mceq_density_profile.txt
data/earth/: README.md
data/solar/: README.md  SNO_hep.csv  SnoCosZenith.csv  fluxes_b16.csv  nudistr_b16_agss09.csv
docs/: module_pipeline_diagram.md  view_module_pipeline_diagrams.ipynb
documentation/theory/: .gitignore  main.tex  references.bib  tpeanuts-theory.sty
earth/: __init__.py  density.py  evolutor.py  exposure.py  exposure_math.py  geometry.py  integration.py  layers.py  numerical.py  probabilities.py
flux_propagation/: __init__.py  pipeline_atmosphere.py  pipeline_coherent.py  pipeline_incoherent.py  pipeline_legacypeanuts.py
io/: __init__.py  io_atmosphere.py  io_common.py  io_earth.py  io_flux_propagation.py  io_solar.py
medium/: __init__.py
medium/atmosphere/: __init__.py  density.py  depth.py  evolutor.py  flux.py  geometry.py  io.py  probability.py  profile.py
medium/earth/: __init__.py  evolutor.py  exposure_integration.py  exposure_io.py  exposure_math.py  exposure_table.py  flux.py  geometry.py  io.py  probability.py  profile.py  validation.py
medium/solar/: __init__.py  evolutor.py  flux.py  geometry.py  io.py  landau_zener.py  matter_mixing.py  probability.py  profile.py  validation.py
medium/vacuum/: __init__.py  evolutor.py  flux.py  probability.py  validation.py
notebooks/: __init__.py  notebookConfig.py  notebooks_helper.py
notebooks/benchmark/: benchmark0_tpeanuts_vs_peanuts_precision.ipynb  benchmark1_perturbative_vs_numerical.ipynb  benchmark1_perturbative_vs_numerical_COLLAB.ipynb  benchmark1_tpeanuts_vs_peanuts-Test_01.ipynb  benchmark1_tpeanuts_vs_peanuts.ipynb  benchmark1_tpeanuts_vs_peanuts_performance.ipynb  benchmark2_tpeanuts_vs_nusquids_performance.ipynb  benchmark3_tpeanuts_profiler.ipynb  benchmark4_peanuts_profiler.ipynb  benchmark_helpers.py
notebooks/corsika/: run1_CosmicRay_Model.ipynb  run2_CosmicRay_SamplePrimaries.ipynb  run3_Corsika_EventGenerator.ipynb  run4_Corsika_EventAnalysis.ipynb  run5_Corsika_NeutrinoAnalysis.ipynb
notebooks/difussion/: run1_difussion_build_dataset.ipynb  run2_difussion_train_model.ipynb
peanuts/: __init__.py  earth.py  evolutor.py  files.py  integration.py  potentials.py  settings.py  solar.py  time_average.py  utils.py  vacuum.py
pipeline/: __init__.py  atmosphere.py  atmosphere_earth.py  atmosphere_flux.py  config.py  earth.py  io.py  pipeline_atmosphere.py  pipeline_coherent.py  pipeline_common.py  pipeline_incoherent.py  pipeline_legacypeanuts.py  solar.py  solar_earth.py
pipeline/legacy/: __init__.py  _common.py  earth.py  solar.py  solar_earth.py
pipeline/test/: test1_solar_earth.py  test2_legacy_pipelines.py  test3_atmosphere_earth.py
solar/: __init__.py  integration.py  matter_mixing.py  probabilities.py  profiles.py  validation.py
tests_backup/1_core/: test0_potential.ipynb  test0_potential.py  test10_core_state_evolution.py  test1_PMNS.ipynb  test1_PMNS.py  test3_spectral.ipynb  test3_spectral.py  test4_evolution.ipynb  test4_evolution.py  test5_integration.ipynb  test5_integration.py  test6_perturbation.ipynb  test7_segment_evolution.py  (+1 more)
util/: __init__.py  atmosphere.py  constant.py  context.py  default.py  io.py  math.py  notebooks.py  parallel.py  solar.py  test_utils.py  torch_util.py  type.py
vacuum/: __init__.py  probabilities.py
(+333 files in other folders)
