[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tpeanuts"
version = "0.1.0"
description = "Torch-based neutrino oscillation and flux propagation utilities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib",
    "matplotlib",
    "mpmath",
    "numba",
    "numpy",
    "pandas",
    "scipy",
    "torch",
    "tqdm",
]

[project.optional-dependencies]
atmosphere = ["pymsis"]
mceq = ["MCEq", "crflux"]
nusquids = ["nusquids"]
test = ["pytest"]
dev = ["pytest", "pymsis", "MCEq", "crflux", "nusquids"]

[tool.setuptools]
packages = [
    "tpeanuts",
    "tpeanuts.analysis",
    "tpeanuts.coherent",
    "tpeanuts.config",
    "tpeanuts.core",
    "tpeanuts.core.BSM",
    "tpeanuts.core.common",
    "tpeanuts.core.numerical",
    "tpeanuts.core.perturbative",
    "tpeanuts.core.SM",
    "tpeanuts.external",
    "tpeanuts.pipeline",
    "tpeanuts.pipeline.legacy",
    "tpeanuts.external.honda",
    "tpeanuts.external.mceq",
    "tpeanuts.external.nusquids",
    "tpeanuts.external.pymsis",
    "tpeanuts.medium",
    "tpeanuts.medium.atmosphere",
    "tpeanuts.medium.earth",
    "tpeanuts.medium.solar",
    "tpeanuts.medium.vacuum",
    "tpeanuts.tests",
    "tpeanuts.util",
    "peanuts",
]
package-dir = { "tpeanuts" = ".", "peanuts" = "peanuts" }
include-package-data = true

[tool.setuptools.package-data]
tpeanuts = ["data/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test*.py"]
